all done except for the slider page.

--- a/bankcard.html
+++ b/bankcard.html
@@ -34,7 +34,7 @@
             <span>+</span>添加银行卡
         </div>
         <p class="user_card_tip">银行卡处于理财中或担保中状态时无法删除。</p>
-        <a class="pure-button user_main_btn ab_bottom" href="javascript:history.back();">返回</a>
+        <a class="pure-button user_main_btn user_main_btn_hollow ab_bottom" href="javascript:history.back();">返回</a>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
