--- a/finance.html
+++ b/finance.html
@@ -29,12 +29,12 @@
     </header>
     <div class="user_main user_reset">
         <section class="user_sec">
-            <div data-href="#"><i class="icon-finance"></i>全部理财</div>
+            <div data-href="finance_all.html"><i class="icon-finance"></i>全部理财</div>
             <div data-href="#"><i class="icon-profit"></i>收益明细</div>
             <div data-href="#"><i class="icon-detail"></i>匹配明细</div>
         </section>
     </div>
-        <a class="pure-button user_main_btn user_main_btn_hollow ab_bottom" href="javascript:history.back();">返回</a>
+        <a class="pure-button user_main_btn user_main_btn_hollow ab_bottom" href="index.html">返回</a>
     <script src="js/zepto.min.js"></script>
     <script>
     // init the datas
