--- a/licaiqueren.html
+++ b/licaiqueren.html
@@ -5,6 +5,7 @@
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="yes" name="apple-touch-fullscreen" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta content="telephone=no" name="format-detection">
     <meta charset="UTF-8">
     <title>理财信息确认</title>
     <link rel="stylesheet" href="css/pure-min.css">
@@ -28,8 +29,8 @@
         <div class="loan_main_comfirmC">
             <div class="loan_main_checkbox">我同意以下协议</div>
             <ol>
-                <li><a href="#">《代扣服务协议》</a></li>
-                <li><a href="#">《出借服务协议》</a></li>
+                <li><a href="agreement.html">《代扣服务协议》</a></li>
+                <li><a href="agreement.html">《出借服务协议》</a></li>
             </ol>
         </div>
         <a class="pure-button loan_main_btn ab_bottom" href="matching2.html" disabled>提交</a>
