--- a/matching_success2.html
+++ b/matching_success2.html
@@ -35,7 +35,7 @@
                 <div class="popup_cnt">
                     <img src="img/check.jpg" alt="success">
                     <p>匹配成功</p>
-                    <a class="pure-button loan_main_btn loan_main_btn_liteblue" href="finance.html">查看我的理财</a>
+                    <a class="pure-button loan_main_btn" href="finance.html">查看我的理财</a>
                 </div>
             </div>
         </div>
