--- a/task.html
+++ b/task.html
@@ -142,7 +142,7 @@
                 </div>
             </dd>
         </dl>
-        <a class="pure-button user_main_btn" href="javascript:history.back();">返回</a>
+        <a class="pure-button user_main_btn user_main_btn_hollow" href="javascript:history.back();">返回</a>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
