--- a/user_center.html
+++ b/user_center.html
@@ -5,6 +5,7 @@
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="yes" name="apple-touch-fullscreen" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta content="telephone=no" name="format-detection">
     <meta charset="UTF-8">
     <title>账户中心</title>
     <link rel="stylesheet" href="css/pure-min.css">
@@ -27,8 +28,8 @@
     </header>
     <div class="user_main">
         <section class="user_sec">
-            <div data-href="finance.html"><i class="icon-finance"></i>我的理财<span>今日收益 <em>28.13</em> 元</span></div>
-            <div data-href="#"><i class="icon-loan"></i>我的借款</div>
+            <div data-href="finance.html"><i class="icon-wealth"></i>我的理财<span>今日收益 <em>28.13</em> 元</span></div>
+            <div data-href="finance_all.html"><i class="icon-loan"></i>我的借款</div>
             <div data-href="bankcard.html"><i class="icon-card"></i>我的银行卡</div>
             <div data-href="coupon.html"><i class="icon-parameter"></i>我的优惠券</div>
         </section>
@@ -36,7 +37,7 @@
             <div data-href="#"><i class="icon-setting"></i>个人设置</div>
             <div data-href="#"><i class="icon-about"></i>关于我们</div>
         </section>
-        <a class="pure-button user_main_btn ab_bottom" href="javascript:history.back();">返回</a>
+        <a class="pure-button user_main_btn user_main_btn_hollow ab_bottom" href="javascript:history.back();">返回</a>
     </div>
     <script src="js/zepto.min.js"></script>
     <script>
