--- a/vip.html
+++ b/vip.html
@@ -13,127 +13,88 @@
 </head>
 
 <body>
-    <div class="user_main user_blank">
-        <dl class="task_item">
-            <dt class="task_title">
-                一起装逼一起飞
-                <a href="#" class="task_btn">领取</a>
-                <div class="task_stars"><i></i><i></i><i></i></div>
+    <div class="user_main user_reset user_blank">
+        <dl class="finance_item vip_item">
+            <dt class="finance_title vip_title">
+                <i class="icon-medal"></i>
+                当前等级 : VIP1
+                <div class="flr"><img class="icon_down" src="img/icon_down_inactive.jpg"><img class="icon_up" src="img/icon_up.jpg"></div>
             </dt>
-            <dd class="task_cnt">
-                <label>任务详情</label>
-                <p>邀请一位朋友马上借款，帮助更多10年前的自己度过难关，有爱世界才会更加温暖</p>
-                <label>任务奖励</label>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_coin.png">
-                    </div>
-                    <span>5元现金</span>
-                </div>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_vip.png">
-                    </div>
-                    <span>VIP1/月</span>
-                </div>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_medal.png">
-                    </div>
-                    <span>老马指路</span>
-                </div>
+            <dd class="finance_cnt">
+                <ul>
+                    <li class="finance_cnt_title vip_cnt_title">
+                        <span>特权一：XXXXXXXXXX</span>
+                        <span>特权二：XXXXXXXXXX</span>
+                        <span>特权三：XXXXXXXXXX</span>
+                    </li>
+                </ul>
             </dd>
         </dl>
-        <dl class="task_item active">
-            <dt class="task_title">
-                借给10年前的自己
-                <a href="invite.html" class="task_btn">领取</a>
-                <div class="task_stars"><i></i><i></i><i></i></div>
+        <dl class="finance_item vip_item">
+            <dt class="finance_title vip_title">
+                <i class="icon-medal"></i>
+                VIP2
+                <div class="flr"><button class="credit_item_btn">充值开通</button><img class="icon_down" src="img/icon_down_inactive.jpg"><img class="icon_up" src="img/icon_up.jpg"></div>
             </dt>
-            <dd class="task_cnt">
-                <label>任务详情</label>
-                <p>邀请一位朋友马上借款，帮助更多10年前的自己度过难关，有爱世界才会更加温暖</p>
-                <label>任务奖励</label>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_coin.png">
-                    </div>
-                    <span>5元现金</span>
-                </div>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_vip.png">
-                    </div>
-                    <span>VIP1/月</span>
-                </div>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_medal.png">
-                    </div>
-                    <span>老马指路</span>
-                </div>
+            <dd class="finance_cnt">
+                <ul>
+                    <li class="finance_cnt_title vip_cnt_title">
+                        <span>特权一：XXXXXXXXXX</span>
+                        <span>特权二：XXXXXXXXXX</span>
+                        <span>特权三：XXXXXXXXXX</span>
+                    </li>
+                </ul>
             </dd>
         </dl>
-        <dl class="task_item">
-            <dt class="task_title">
-                每日签到
-                <a href="#" class="task_btn">领取</a>
-                <div class="task_stars"><i></i></div>
+        <dl class="finance_item vip_item">
+            <dt class="finance_title vip_title">
+                <i class="icon-medal"></i>
+                VIP3
+                <div class="flr"><button class="credit_item_btn">充值开通</button><img class="icon_down" src="img/icon_down_inactive.jpg"><img class="icon_up" src="img/icon_up.jpg"></div>
             </dt>
-            <dd class="task_cnt">
-                <label>任务详情</label>
-                <p>邀请一位朋友马上借款，帮助更多10年前的自己度过难关，有爱世界才会更加温暖</p>
-                <label>任务奖励</label>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_coin.png">
-                    </div>
-                    <span>5元现金</span>
-                </div>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_vip.png">
-                    </div>
-                    <span>VIP1/月</span>
-                </div>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_medal.png">
-                    </div>
-                    <span>老马指路</span>
-                </div>
+            <dd class="finance_cnt">
+                <ul>
+                    <li class="finance_cnt_title vip_cnt_title">
+                        <span>特权一：XXXXXXXXXX</span>
+                        <span>特权二：XXXXXXXXXX</span>
+                        <span>特权三：XXXXXXXXXX</span>
+                    </li>
+                </ul>
             </dd>
         </dl>
-        <dl class="task_item">
-            <dt class="task_title">
-                理财小分队
-                <a href="#" class="task_btn">领取</a>
-                <div class="task_stars"><i></i><i></i><i></i><i></i></div>
+        <dl class="finance_item vip_item">
+            <dt class="finance_title vip_title">
+                <i class="icon-medal"></i>
+                VIP4
+                <div class="flr"><button class="credit_item_btn">充值开通</button><img class="icon_down" src="img/icon_down_inactive.jpg"><img class="icon_up" src="img/icon_up.jpg"></div>
             </dt>
-            <dd class="task_cnt">
-                <label>任务详情</label>
-                <p>邀请一位朋友马上借款，帮助更多10年前的自己度过难关，有爱世界才会更加温暖</p>
-                <label>任务奖励</label>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_coin.png">
-                    </div>
-                    <span>5元现金</span>
-                </div>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_vip.png">
-                    </div>
-                    <span>VIP1/月</span>
-                </div>
-                <div class="task_bonus">
-                    <div class="task_bonus_img">
-                        <img src="img/task_medal.png">
-                    </div>
-                    <span>老马指路</span>
-                </div>
+            <dd class="finance_cnt">
+                <ul>
+                    <li class="finance_cnt_title vip_cnt_title">
+                        <span>特权一：XXXXXXXXXX</span>
+                        <span>特权二：XXXXXXXXXX</span>
+                        <span>特权三：XXXXXXXXXX</span>
+                    </li>
+                </ul>
             </dd>
         </dl>
+        <dl class="finance_item vip_item">
+            <dt class="finance_title vip_title">
+                <i class="icon-medal"></i>
+                VIP5
+                <div class="flr"><button class="credit_item_btn">充值开通</button><img class="icon_down" src="img/icon_down_inactive.jpg"><img class="icon_up" src="img/icon_up.jpg"></div>
+            </dt>
+            <dd class="finance_cnt">
+                <ul>
+                    <li class="finance_cnt_title vip_cnt_title">
+                        <span>特权一：XXXXXXXXXX</span>
+                        <span>特权二：XXXXXXXXXX</span>
+                        <span>特权三：XXXXXXXXXX</span>
+                    </li>
+                </ul>
+            </dd>
+        </dl>
+        <a class="pure-button user_main_btn" href="#">免费开通</a>
         <a class="pure-button user_main_btn user_main_btn_hollow ab_bottom" href="javascript:history.back();">返回</a>
     </div>
     <script src="js/zepto.min.js"></script>
@@ -144,9 +105,13 @@
     /*init the height of main sec*/
     $(".user_main").css("height",$(window).height()-$(".task_nav .pure-g").height());
     /*task item toggle*/
-    $(".task_item").click(function() {
-        $(".task_item").removeClass("active");
-        $(this).addClass("active");
+    $(".finance_item").click(function() {
+        if($(this).attr("class").indexOf("active")<0){
+        $(".finance_item").removeClass("active");
+        var that=this;
+        timeout_finance=setTimeout(function(){$(that).addClass("active");},100);
+        }
+        else{$(".finance_item").removeClass("active");}
     })
     </script>
 </body>
